prost-reflect/tests/snapshots/main__generate_group_message_name_conflict.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "name 'Foo.Baz' is defined twice"
related: []
severity: error

