prost-reflect/tests/snapshots/main__generate_map_entry_message_name_conflict.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "name 'Foo.BazEntry' is defined twice"
related: []
severity: error

