prost-reflect/tests/snapshots/main__generate_synthetic_oneof_name_conflict.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "name 'Foo._val' is defined twice"
related: []
severity: error

