prost-reflect/tests/snapshots/main__invalid_message_number1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
help: message numbers 19000 to 19999 are reserved
labels: []
message: "invalid field number '19000'"
related: []
severity: error

