prost-reflect/tests/snapshots/main__invalid_message_number2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
help: field numbers 19000 to 19999 are reserved
labels: []
message: "invalid field number '19999'"
related: []
severity: error

