prost-reflect/tests/snapshots/main__invalid_service_type1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "'.Enum' is not a message type"
related: []
severity: error

