prost-reflect/tests/snapshots/main__invalid_service_type3.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "'.Service' is not a message type"
related: []
severity: error

