prost-reflect/tests/snapshots/main__message_field_duplicate_number1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "field number '1' is already used"
related: []
severity: error

