prost-reflect/tests/snapshots/main__message_reserved_range_message_set1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - messageType:
      - name: Foo
        options:
          messageSetWireFormat: true
        reservedRange:
          - end: 2147483647
            start: 1
    name: test.proto

