prost-reflect/tests/snapshots/main__message_reserved_range_message_set2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - messageType:
      - extensionRange:
          - end: 2147483647
            start: 1
        name: Foo
        options:
          messageSetWireFormat: true
    name: test.proto

