prost-reflect/tests/snapshots/main__message_reserved_range_overlap_with_field1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "field number '2' conflicts with reserved range '2 to 2'"
related: []
severity: error

